Small adjustments and fix nav menu from overflowing past screen width

--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -5,8 +5,14 @@
   --hamburger-foreground-inactive: var(--color-black);
   --hamburger-background-active: var(--color-white);
   --hamburger-foreground-active: var(--color-black);
-  
+
+  /*
+   * left-align is used to translate the fixed element right a bit. (hence negative)
+   * right-align is used to enforce a maximum screen right value so the popover doesn't get cut off.
+   * I tried to make this smarter, but in the end I used a @xxl media query to manually enforce this.
+   */
   --popover-left-align: -2rem;
+  --popover-right-align: auto;
 
   box-sizing: border-box;
   position: fixed;
@@ -28,8 +34,15 @@
 }
 
 @media (max-width: @xxl) {
-  .site-nav #nav-cat-contribute {
-    --popover-left-align: -6rem;
+  .site-nav {
+    #nav-cat-about {
+      --popover-left-align: 0;
+      --popover-right-align: 1rem;
+    }
+    #nav-cat-contribute  {
+      --popover-left-align: 0;
+      --popover-right-align: 1rem;
+    }
   }
 }
 
@@ -152,7 +165,7 @@
 .nav-links {
   display: flex;
   align-items: center;
-  gap: 30px;
+  gap: 2rem;
   list-style: none;
 
   // Pt1. Provide a larger hover area
@@ -165,13 +178,13 @@
     cursor: pointer;
     padding-top: 18px;
 
-
     // Pop-over menu
     .popover-container {
       display: none;
-      position: absolute;
-      margin-left: var(--popover-left-align);
-      min-width: 470px;
+      position: fixed;
+      right: var(--popover-right-align);
+      translate: var(--popover-left-align);
+      width: 470px;
 
       // Actual physical panel
       .popover-panel {
