--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -103,7 +103,7 @@
     }
 
     @media (max-width: @lg) {
-      flex-direction: column;
+      flex-direction: column-reverse;
 
       .column {
         max-width: 100%;
